# moly

./: Cargo.toml
moly-kit/: Cargo.toml
moly-kit/docs/: a2ui_system_prompt.md
moly-kit/src/: lib.rs  widgets.rs
moly-kit/src/a2ui/: a2a_client.rs  data_model.rs  host.rs  message.rs  mod.rs  processor.rs  registry.rs  sse.rs  surface.rs  value.rs
moly-kit/src/widgets/: a2ui_client.rs  chat.rs  messages.rs  prompt_input.rs  standard_message_content.rs
